# Dr-DevLove-or-How-I-Learned-to-Stop-Analysis-Paralysis-and-Love-Writing-Massive-Amounts-of-Code

./: .gitignore  QUICK_REFERENCE.txt  README.ar.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  TIME_RANGE_UPDATE.md  gh_stats_cli.py  pyproject.toml  test_time_ranges.py
.github/workflows/: release.yml  test.yml
docs/: TODO.md  myrules.md  parameters.md
scripts/: gh-stats.sh
src/gh_stats/: api.py  arena.py  args.py  date_parser.py  discovery.py  exporter.py  highlights.py  json_exporter.py  main.py  noise.py  portrait.py  scanner.py  server.py  ui.py  utils.py
tests/: test_api_commits.py  test_args.py  test_date_logic.py  test_exporter.py
web/: package.json  pnpm-lock.yaml  tailwind.config.ts
web/public/: data.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: ArenaCard.tsx  CommitChart.tsx  HighlightsCard.tsx  PortraitCard.tsx  RepoChart.tsx  StatsTable.tsx  SummaryCards.tsx
web/src/types/: stats.ts
