[project]
name = "gh-stats"
version = "0.1.0"
description = "A command-line tool to track GitHub contribution statistics across personal and organization repositories."
authors = [
    { name = "bxu" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
gh-stats = "gh_stats.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_stats"]

[tool.hatch.build.targets.wheel.force-include]
"src/gh_stats/static" = "gh_stats/static"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.15.1",
]
